feat: add public booking options backend
